[NEW] FTP composer Class

--- a/libraries/composer.json
+++ b/libraries/composer.json
@@ -1,5 +1,6 @@
 {
     "require": {
-        "wapmorgan/unified-archive": "^0.1.0"
+        "wapmorgan/unified-archive": "^0.1.0",
+        "nicolab/php-ftp-client": "^1.4"
     }
 }
